templates/src/data-curator/content/force-app/main/default/objects/Metadata_Asset__c/Metadata_Asset__c.object-meta.xml
<CustomObject>
    <description>Catalog of Salesforce metadata assets that the Data Curator app monitors and remediates.</description>
    <label>Metadata Asset</label>
    <nameField>
        <label>Metadata Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>