templates/src/data-curator/content/force-app/main/default/objects/Metadata_Asset__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>