templates/src/data-curator/content/force-app/main/default/objects/Metadata_Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Object</fullName>
                <default>true</default>
                <label>Object</label>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>ApexClass</fullName>
                <label>Apex Class</label>
            </value>
            <value>
                <fullName>ValidationRule</fullName>
                <label>Validation Rule</label>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
                <label>Permission Set</label>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>PromptTemplate</fullName>
                <label>Prompt Template</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>