templates/src/data-curator/content/force-app/main/default/objects/Metadata_Asset__c/fields/Duplicate_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Group_Key__c</fullName>
    <label>Duplicate Group Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>