templates/src/data-curator/content/force-app/main/default/objects/Metadata_Asset__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>