templates/src/data-curator/content/force-app/main/default/objects/Metadata_Asset__c/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <label>Health Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
                <default>true</default>
                <label>Healthy</label>
            </value>
            <value>
                <fullName>Stale</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>NeedsReview</fullName>
                <label>Needs Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>