templates/src/data-curator/content/force-app/main/default/objects/Metadata_Asset__c/fields/Last_Attested_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Attested_On__c</fullName>
    <label>Last Attested On</label>
    <type>Date</type>
</CustomField>