templates/src/data-curator/content/force-app/main/default/objects/Metadata_Asset__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Metadata Assets</relationshipLabel>
    <relationshipName>MetadataAssets</relationshipName>
    <type>Lookup</type>
</CustomField>