templates/src/data-curator/content/force-app/main/default/objects/Metadata_Asset__c/fields/Stale_Days__c.field-meta.xml
<CustomField>
    <fullName>Stale_Days__c</fullName>
    <label>Stale Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>