templates/src/data-curator/content/force-app/main/default/objects/Metadata_Asset__c/fields/Stewardship_Notes__c.field-meta.xml
<CustomField>
    <fullName>Stewardship_Notes__c</fullName>
    <label>Stewardship Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>